# WeiQuiz-Agentic-RAG

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent/: enterprise_agentic_rag_project_plan.md
app/: api.py  config.py  metadata_schema.py  observability.py  query.py  rag_milvus.py  ui.py
app/agentic/: controller.py  grounding.py  hyde.py  llama_workflow.py  memory.py  node_synthesizer.py  query_rewrite.py  rag_workflow.py  retrieval_quality.py  router.py  step_back.py  sub_question.py
app/api_support/: __init__.py  helpers.py  schemas.py  state.py
app/auth/: dependencies.py  repository.py  router.py  schemas.py  security.py  service.py
app/eval/: __init__.py  build_cn_finance_node_qrels.py  eval_cn_finance_retrieval.py  eval_ragas.py  eval_retrieval.py  eval_retrieval_ablation.py  prepare_beir_scifact.py  prepare_squad_eval.py
app/ingest/: document_parser.py  milvus_loader.py  ocr_single_pdf.py  ocr_unstructured_pdf.py  rebuild_from_audit_sections.py  sync.py
app/kb/: __init__.py  router.py
app/llm/: __init__.py  gateway.py
app/retrieval/: __init__.py  auto_merging_context.py  bm25_state.py  cache.py  parent_context.py  table_context.py
app/routes/: admin.py  chat.py  debug.py  documents.py  health.py  legacy_query.py  sessions.py
app/services/: long_term_memory_service.py  memory_service.py
app/storage/: __init__.py  auth_models.py  migrate_docstore_to_postgres.py  parent_store.py
app/tools/: __init__.py  mcp_client.py  models.py  planner.py  registry.py  skill.py  web_search.py
docs/: GraphRAG.md  agent-controller-design.md  architecture.md  mem0-long-term-memory.md  memory-system-mainstream.md  project-summary.md  rag-interview-question-driven-roadmap.md  rag-troubleshooting-guide.md  tool-system-implementation.md
docx/: AgenticRAG差距分析报告.md  RAG 系统评估计划书.md  Redis学习笔记.md  WeiQuiz 多轮对话与 SSE 实现.md  agent-rag-learning-and-optimization-roadmap.md  agentic-rag-gap-priority-report.md  auth-rbac-project-plan.md  memory-system-and-compression.md  mentor-prompt-brief.md  mentor-prompt-detailed.md  智能体提示词.txt  项目开发日志.md  项目计划书.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: AdminPanel.vue  AppHeader.vue  ChatPanel.vue  DebugPanel.vue  Icon.vue  KnowledgeSidebar.vue  SessionList.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminView.vue  ChatView.vue  LoginView.vue
others/: main.py
scripts/: audit_cn_finance_eval_quality.py  convert_pdf_to_md.py  convert_sec_html_to_md.py  download_cninfo_reports.py  download_finance_pdfs.py  download_sec_filings.py  generate_cn_finance_eval_v2.py  generate_cn_finance_golden_eval.py  refine_cn_finance_eval_questions.py
tests/: conftest.py  test_auth.py  test_auth_integration.py  test_llama_workflow.py  test_memory_system.py  test_metadata_schema.py  test_node_synthesizer.py  test_query_rewrite.py  test_rag_workflow.py  test_retrieval_quality.py  test_router.py  test_table_context.py  test_table_merge.py  test_table_split.py  test_tools_system.py
